--- a/styles/style.css
+++ b/styles/style.css
@@ -75,12 +75,12 @@ body {
 
 /* DARK MODE OS */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
     body {
         background-color: var(--color-dark);
     }
     .header {
         filter: invert(100%)
     }
-}
+} */
 
